--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "2024-12-11",
   "version": "1.0.0",
   "main": "app.js",
+  "scripts": {
+    "dev": "node app.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
