--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "node app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Viktorija (https://github.com/viktorijabrun)",
   "license": "ISC",
   "description": "",
   "dependencies": {
